# harryNET

./: .gitignore  CMakeLists.txt  CommandLine.h  Makefile  NeuralNet.h  README.md  layers.h  main.cpp  neuron.h  tests.cpp
benchmark/: benchmark.cpp
include/: CommandLine.h  NeuralNet.h  activations.h  layers.h  neuron.h
include/harryNET/: autograd.h  blas.h  data_utils.h  dataloader.h  dataset.h  module.h  ops.h  optimizer.h  shape.h  simd.h  storage.h  tensor.h
src/: main.cpp  tensor.cpp  tests.cpp
